@@ -4,7 +4,7 @@ import ChatInput from '../components/ChatInput.svelte';
 import Icon from '../components/Icon.svelte';
 import InfinityScroll from '../components/InfinityScroll.svelte';
 import Link from '../components/Link.svelte';
-import {conversationUrl, gotoConversation} from '../js/chatHelpers';
+import {conversationUrl} from '../js/chatHelpers';
 import {getContext, onMount} from 'svelte';
 import {l, lmd} from '../store/I18N';
 import {nbsp} from '../js/util';
@@ -38,6 +38,19 @@ function search(msg) {
 }
 </script>
 
+<style lang="scss">
+.message a {
+  text-decoration: none;
+  display: block;
+
+  &:focus,
+  &:hover {
+    background: var(--body-bg);
+    filter: brightness(0.95);
+  }
+}
+</style>
+
 <ChatHeader>
   <h1>{$l(conversation.name)}</h1>
   <Link href="/search" class="btn-hallow can-toggle {hasSearch ? 'has-tooltip is-active' : ''}" on:click="{maybeClear}">
@@ -63,15 +76,17 @@ function search(msg) {
       <div class="message__status-line for-day-changed"><span><Icon name="calendar-alt"/> <i>{message.ts.getHumanDate()}</i></span></div>
     {/if}
 
-    <a href="{conversationUrl(message)}" class="{message.className}" on:click="{gotoConversation}">
+    <div class="{message.className}">
       <Icon name="pick:{message.from}" color="{message.color}"/>
-      <div class="message__ts has-tooltip">
-        <span>{message.ts.format('%H:%M')}</span>
-        <span class="tooltip">{nbsp(message.ts.toLocaleString())}</span>
-      </div>
-      <span class="message__from" style="color:{message.color}">{$l('%1 in %2', message.from, message.conversation_id)}</span>
-      <div class="message__text">{@html message.html}</div>
-    </a>
+      <span class="message__from" style="color:{message.color}" tabindex="-1">{message.from}</span>
+      <a href={conversationUrl(message)}>
+        <div class="message__ts has-tooltip">
+          <span>{message.ts.format('%H:%M')}</span>
+          <span class="tooltip">{nbsp(message.ts.toLocaleString())}</span>
+        </div>
+        {@html message.html}
+      </a>
+    </div>
   {/each}
 
   <!-- status -->
